smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/byte-strings/invalid-unicode-escape5.smithy
// Syntax error at line 4, column 16: Error parsing byte string: Invalid hex character: `t` | Model
namespace smithy.example

@documentation(b"\uataa")
string MyString
